[tool.poetry]
name = "imutils2"
version = "0.1.0"
description = "image utils"
authors = ["Sully <codeskyblue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
Pillow = "*"
typeguard = "*"
opencv-python = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^2"
pytest-httpserver = "^1.0.8"

[tool.poetry-dynamic-versioning] # 根据tag来动态配置版本号
enable = true

# 需要将原本的build-system替换掉
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

omit = [
    "tests/*",
    "docs/*"
]